--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <input type="text" placeholder="Tìm kiếm khách hàng">
             <button>🔍</button>
         </div>
-        <button><a href="Capdon_1.html">Thêm khách hàng</a></button>
+        <button><a href="Capdon_1.html">Cấp đơn</a></button>
         <table>
             <tr>
                 <th>Số hợp đồng</th>
