--- a/index.html
+++ b/index.html
@@ -91,21 +91,32 @@
         <button><a href="Capdon_1.html">Cấp đơn</a></button>
         <table>
             <tr>
-                <th>Số hợp đồng</th>
-                <th>Tên khách hàng</th>
-                <th>Ngày phát sinh hợp đồng</th>
-                <th>Gốc</th>
-                <th>Bổ sung</th>
-                <th>Giảm</th>
-                <th>Trạng thái</th>
+                <th rowspan="2">Số hợp đồng</th>
+                <th rowspan="2">Tên khách hàng</th>
+                <th rowspan="2">Ngày phát sinh hợp đồng</th>
+                <th colspan="2">Gốc</th>
+                <th colspan="2">Bổ sung</th>
+                <th colspan="2">Giảm</th>
+                <th rowspan="2">Trạng thái</th>
+            </tr>
+            <tr>
+                <th>Số đơn</th>
+                <th>Phí</th>
+                <th>Số đơn</th>
+                <th>Phí</th>
+                <th>Số đơn</th>
+                <th>Phí</th>
             </tr>
             <tr>
                 <td>HDBank</td>
                 <td>10/01/2025</td>
                 <td>1</td>
                 <td>10.000</td>
-                <td>2</td>
                 <td>20.000</td>
+                <td>2</td>
+                <td>5.000</td>
+                <td>1</td>
+                <td>3.000</td>
                 <td class="status">Status</td>
             </tr>
             <tr>
@@ -113,6 +124,9 @@
                 <td>15/01/2025</td>
                 <td>1</td>
                 <td>10.000</td>
+                <td>15.000</td>
+                <td></td>
+                <td></td>
                 <td></td>
                 <td></td>
                 <td class="status">Status</td>
@@ -122,6 +136,9 @@
                 <td>20/01/2025</td>
                 <td>1</td>
                 <td>10.000</td>
+                <td>12.000</td>
+                <td></td>
+                <td></td>
                 <td></td>
                 <td></td>
                 <td class="status">Status</td>
