--- a/index.html
+++ b/index.html
@@ -103,16 +103,16 @@
                 <th>Số đơn</th>
                 <th>Phí</th>
                 <th>Số đơn</th>
-                <th>Phí</th>
+                <th>Phí(VND)</th>
                 <th>Số đơn</th>
-                <th>Phí</th>
+                <th>Phí(VND)</th>
             </tr>
             <tr>
                 <td>HDBank</td>
-                <td>10/01/2025</td>
-                <td>1</td>
-                <td>10.000</td>
-                <td>20.000</td>
+                <td>Nguyễn Văn A</td>
+                <td>15/01/2025</td>
+                <td>100</td>
+                <td>200.000.000</td>
                 <td>2</td>
                 <td>5.000</td>
                 <td>1</td>
@@ -122,9 +122,9 @@
             <tr>
                 <td>PD1_1</td>
                 <td>15/01/2025</td>
-                <td>1</td>
-                <td>10.000</td>
-                <td>15.000</td>
+                <td>15/01/2025</td>
+                <td>20</td>
+                <td>40.000.000</td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -134,9 +134,9 @@
             <tr>
                 <td>PD1_2</td>
                 <td>20/01/2025</td>
-                <td>1</td>
-                <td>10.000</td>
-                <td>12.000</td>
+                <td>15/01/2025</td>
+                <td>10</td>
+                <td>20.000.000</td>
                 <td></td>
                 <td></td>
                 <td></td>
