--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
                 <th>Phí(VND)</th>
             </tr>
             <tr>
-                <td>HDBank</td>
-                <td>Nguyễn Văn A</td>
+                <td>PD0101HEA2500105-00</td>
+                <td>Ngân hàng phát triển HDBank</td>
                 <td>15/01/2025</td>
                 <td>100</td>
                 <td>200.000.000</td>
@@ -122,9 +122,9 @@
             <tr>
                 <td>PD1_1</td>
                 <td>15/01/2025</td>
-                <td>15/01/2025</td>
-                <td>20</td>
-                <td>40.000.000</td>
+                <td>Công ty hàng không Vietjet</td>
+                <td>5.000.000</td>
+                <td>1.200.000.000</td>
                 <td></td>
                 <td></td>
                 <td></td>
