--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td class="status">Status</td>
+                <td class="status">Gốc</td>
             </tr>
             <tr>
                 <td>PD0101HEA2500107-00</td>
@@ -129,19 +129,19 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td class="status">Status</td>
+                <td class="status">Gốc</td>
             </tr>
             <tr>
                 <td>PD0101HEA2500105-01</td>
+                <td>Ngân hàng phát triển HDBank</td>
                 <td>20/02/2025</td>
-                <td>15/01/2025</td>
                 <td></td>
                 <td></td>
                 <td>30</td>
                 <td>60.000.000</td>
                 <td>12</td>
                 <td>24.000.000</td>
-                <td class="status">Status</td>
+                <td class="status">SĐBS</td>
             </tr>
         </table>
     </div>
