--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td class="status"><a href="Detail_don.html">Gốc</a></td>
+                <td class="status"><a href="Detail_Don.html">Gốc</a></td>
             </tr>
             <tr>
                 <td>PD0101HEA2500107-00</td>
