--- a/2.3.Điều_chỉnh_dsNĐBH.html
+++ b/2.3.Điều_chỉnh_dsNĐBH.html
@@ -126,6 +126,9 @@
             transform: scale(1.1);
             transition: transform 0.2s ease-in-out;
         }
+						.red_color{
+		color: red;
+		}
     </style>
 </head>
 <body>
@@ -134,25 +137,25 @@
         <form>
             <div class="form-row">
                 <div class="form-group form-group-half">
-                    <label>Tên người được bảo hiểm</label>
+                    <label>Tên người được bảo hiểm<b class="red_color">*</b></label>
                     <input id="NDBH_name" type="text" name="tenKhachHang" required>
                 </div>
                 <div class="form-group form-group-half">
-                    <label>Ngày sinh</label>
+                    <label>Ngày sinh<b class="red_color">*</b></label>
                     <input id="NDBH_dob" type="date" name="ngaySinh" required>
                 </div>
             </div>
 
             <div class="form-row">
                 <div class="form-group form-group-half">
-                    <label>Giới tính:</label>
+                    <label>Giới tính</label>
                     <select id="NDBH_GT">
                         <option>Nam</option>
                         <option>Nữ</option>
                     </select>
                 </div>
                 <div class="form-group form-group-half">
-                    <label>ID Card</label>
+                    <label>ID Card<b class="red_color">*</b></label>
                     <input id="NDBH_idCard" type="text" name="idCard" required>
                 </div>
             </div>
@@ -170,7 +173,7 @@
 
             <div class="form-row">
                 <div class="form-group form-group-half">
-                    <label>Gói bảo hiểm</label>
+                    <label>Gói bảo hiểm<b class="red_color">*</b></label>
                     <select name="goiBaohiem" id="NDBH_goiBaohiem" class="custom-select">
                         <option value="" disabled selected hidden>Chọn gói bảo hiểm</option>
                         <option value="Goi1">SK_VJ_01_Nhân viên</option>
@@ -184,37 +187,34 @@
 
             <div class="form-row">
                 <div class="form-group form-group-half">
-                    <label>Phí</label>
+                    <label>Phí<b class="red_color">*</b></label>
                     <input id="NDBH_fee" type="number" name="phi" step="0.01" required>
                 </div>
-                <div class="form-group form-group-half">
-                    <label>Nguyên tệ</label>
-                    <select name="nguyenTe">
-                        <option value="VND" selected>VND</option>
-                        <option value="USD">USD</option>
-                    </select>
-                </div>
+			<div class="form-group form-group-half" id="reducedFeeRow" style="display: none;">
+				<label id="reducedFeeLabel">Phí giảm<b class="red_color">*</b></label>
+				<input id="NDBH_reducedFee" type="number" name="phiGiam" step="0.01" placeholder="Mặc định hiển thị phí hệ thống tính">
+			</div>
             </div>
 
             <div class="form-row">
                 <div class="form-group form-group-half">
-                    <label>Ngày bắt đầu hiệu lực</label>
+                    <label>Ngày bắt đầu hiệu lực<b class="red_color">*</b></label>
                     <input id="NDBH_startDate" type="datetime-local" name="ngayBatDau" required>
                 </div>
                 <div class="form-group form-group-half">
-                    <label>Ngày kết thúc hiệu lực</label>
+                    <label>Ngày kết thúc hiệu lực<b class="red_color">*</b></label>
                     <input id="NDBH_endDate" type="datetime-local" name="ngayKetThuc" required>
                 </div>
             </div>
 
             <div class="form-row">
                 <div class="form-group form-group-half">
-                    <label>Loại</label>
+                    <label>Loại<b class="red_color">*</b></label>
                     <select id="NDBH_adjustmentType" name="loai">
                      
                         <option value="Giảm">Giảm</option>
                         <option value="Thay đổi thông tin">Thay đổi thông tin</option>
-                        <option value="Thay đổi thông tin phí">Thay đổi thông tin phí</option>
+						<option value="Thay đổi thông tin phí">Thay đổi thông tin phí</option>
                     </select>
                 </div>
                 <div class="form-group form-group-half" id="NDBH_certificateField">
@@ -307,32 +307,58 @@
             });
         }
 
-        // Load ẩn/hiện Số GCN
-        document.addEventListener("DOMContentLoaded", function () {
-            var adjustmentTypeSelect = document.getElementById("NDBH_adjustmentType");
-            var certificateField = document.getElementById("NDBH_certificateField");
+        // Load ẩn/hiện Phí
+		document.addEventListener("DOMContentLoaded", function () {
+			var adjustmentTypeSelect = document.getElementById("NDBH_adjustmentType");
+			var certificateField = document.getElementById("NDBH_certificateField");
+			var reducedFeeRow = document.getElementById("reducedFeeRow");
+			var reducedFeeLabel = document.getElementById("reducedFeeLabel");
+			var reducedFeeInput = document.getElementById("NDBH_reducedFee");
 
-            if (!adjustmentTypeSelect || !certificateField) {
-                console.error("❌ Không tìm thấy phần tử cần thiết!");
-                return;
-            }
+			if (!adjustmentTypeSelect || !certificateField || !reducedFeeRow || !reducedFeeLabel || !reducedFeeInput) {
+				console.error("❌ Không tìm thấy phần tử cần thiết!");
+				return;
+			}
 
-            function checkAdjustmentType() {
-                if (adjustmentTypeSelect.value === "Gốc" || adjustmentTypeSelect.value === "Tăng") {
-                    certificateField.style.display = "none"; // Ẩn trường
-                } else {
-                    certificateField.style.display = "flex"; // Hiển thị trường
-                }
-            }
+			function checkAdjustmentType() {
+				var adjustmentType = adjustmentTypeSelect.value;
+				certificateField.style.display = "flex";
 
-            // Kiểm tra ngay khi trang tải
-            checkAdjustmentType();
+				if (adjustmentType === "Giảm") {
+					reducedFeeRow.style.display = "flex";
+					reducedFeeLabel.textContent = "Phí giảm*";
+					reducedFeeInput.disabled = false;
+				} else if (adjustmentType === "Tăng") {
+					reducedFeeRow.style.display = "flex";
+					reducedFeeLabel.textContent = "Phí tăng*";
+					reducedFeeInput.disabled = false;
+				} else if (adjustmentType === "Gốc") {
+					reducedFeeRow.style.display = "flex";
+					reducedFeeLabel.textContent = "Phí*";
+					reducedFeeInput.disabled = false;
+				} else if (adjustmentType === "Thay đổi thông tin") {
+					reducedFeeRow.style.display = "flex";
+					reducedFeeLabel.textContent = "Phí";
+					reducedFeeInput.disabled = true;
+				} else if (adjustmentType === "Thay đổi thông tin phí") {
+					reducedFeeRow.style.display = "flex";
+					reducedFeeLabel.textContent = "Phí";
+					reducedFeeInput.disabled = false;
+				} else {
+					reducedFeeRow.style.display = "none";
+				}
 
-            // Lắng nghe sự thay đổi của dropdown
-            adjustmentTypeSelect.addEventListener("change", function () {
-                checkAdjustmentType();
-            });
-        });
+				if (adjustmentType === "Thay đổi thông tin" || adjustmentType === "Thay đổi thông tin phí") {
+					certificateField.style.display = "flex";
+				}
+			}
+
+			checkAdjustmentType();
+
+			adjustmentTypeSelect.addEventListener("change", function () {
+				checkAdjustmentType();
+			});
+		});
     </script>
 </body>
 </html>
