--- a/Capdon_2.html
+++ b/Capdon_2.html
@@ -546,7 +546,7 @@ function saveEditInfo_NewID(element) {
 					<td>4</td>
 					<td id="name">Phạm Thị D</td>
 					<td id="goiBaohiem">SK_VJ_02_Quản lý</td>
-					<td id="adjustmentType">Thay đổi thông tin phí</td>
+					<td id="adjustmentType">Thay đổi thông tin</td>
 					<td id="fee">2.580.000</td>
 					<td id="dob">20/06/1995</td>
 					<td id="idCard">456456456</td>
