--- a/2.1.Sửa thông tin điều chỉnh.html
+++ b/2.1.Sửa thông tin điều chỉnh.html
@@ -222,7 +222,7 @@
 					</select>
 				</div>
 				<div class="form-group form-group-half">
-						<a href="2.2.XemCT.html" class="link-button" >Xem chi tiết quyền lợi</a>
+						<a href="#" class="link-button" >Xem chi tiết quyền lợi</a>
 				</div>
             </div>
 
@@ -254,7 +254,7 @@
 						<option value="Gốc">Gốc</option>
                         <option value="Tăng">Tăng</option>
                         <option value="Giảm">Giảm</option>
-                        <!--<option value="Thay đổi thông tin">Thay đổi thông tin</option>-->
+                        <option value="Thay đổi thông tin">Thay đổi thông tin</option>
                     </select>
                 </div>
 				<div class="form-group form-group-half" id="certificateField">
