--- a/2.3.Điều_chỉnh_dsNĐBH.html
+++ b/2.3.Điều_chỉnh_dsNĐBH.html
@@ -181,7 +181,7 @@
                     </select>
                 </div>
                 <div class="form-group form-group-half">
-                    <a href="2.2.XemCT.html" class="link-button">Xem chi tiết quyền lợi</a>
+                    <a href="#" class="link-button">Xem chi tiết quyền lợi</a>
                 </div>
             </div>
 
