--- a/2.3.Điều_chỉnh_dsNĐBH.html
+++ b/2.3.Điều_chỉnh_dsNĐBH.html
@@ -133,7 +133,7 @@
 </head>
 <body>
     <div class="container">
-        <h2>Điều chỉnh thông tin</h2>
+        <h2>Điều chỉnh thông tin Người được bảo hiểm</h2>
         <form>
             <div class="form-row">
                 <div class="form-group form-group-half">
