--- a/2.1.Sửa thông tin điều chỉnh.html
+++ b/2.1.Sửa thông tin điều chỉnh.html
@@ -170,7 +170,7 @@
 </head>
 <body>
     <div class="container">
-        <h2>Điều chỉnh thông tin</h2>
+        <h2>Cập nhật thông tin cấp đơn</h2>
         <form>
             <div class="form-row">
                 <div class="form-group form-group-half">
