--- a/2.3.Điều_chỉnh_dsNĐBH.html
+++ b/2.3.Điều_chỉnh_dsNĐBH.html
@@ -202,13 +202,13 @@
 
             <div class="form-row">
                 <div class="form-group form-group-half">
-                    <label>Phí<b class="red_color">*</b></label>
-                    <input id="NDBH_fee" type="number" name="phi" step="0.01" required>
+                    <label>Phí gốc<b class="red_color"></b></label>
+                    <input id="NDBH_fee" type="number" name="phi" step="0.01" disabled>
                 </div>
-			<div class="form-group form-group-half" id="reducedFeeRow" style="display: none;">
-				<label id="reducedFeeLabel">Phí giảm<b class="red_color">*</b></label>
-				<input id="NDBH_reducedFee" type="number" name="phiGiam" step="0.01" placeholder="Mặc định hiển thị phí hệ thống tính">
-			</div>
+				<div class="form-group form-group-half" id="reducedFeeRow" style="display: none;">
+					<label id="reducedFeeLabel">Phí giảm<b class="red_color">*</b></label>
+					<input id="NDBH_reducedFee" type="number" name="phiGiam" step="0.01" placeholder="Mặc định hiển thị phí hệ thống tính">
+				</div>
             </div>
 
             <div class="form-row">
